php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #68848 Missing return for collator_sortkey_swap()
Submitted: 2015-01-17 09:09 UTC Modified: 2015-01-19 04:42 UTC
From: bugreports at internot dot info Assigned: ab (profile)
Status: Closed Package: intl (PECL)
PHP Version: master-Git-2015-01-17 (Git) OS: Linux Ubuntu 14.04
Private report: No CVE-ID: None
 [2015-01-17 09:09 UTC] bugreports at internot dot info
Description:
------------
Hi,

In /ext/intl/collator/collator_sort.c:

348static collator_sortkey_swap(collator_sort_key_index_t *p, collator_sort_key_index_t *q) /* {{{ */
349{
350        collator_sort_key_index_t t;
351        t = *p;
352        *p = *q;
353        *q = t;
354}

There is no return. Should it be defined as a void?


Thanks


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-01-17 20:00 UTC] ab@php.net
Automatic comment on behalf of bugreports@internot.info
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f418486343e39904f843f472cea973922d7e8244
Log: Fixed bug #68848 Missing return
 [2015-01-17 20:00 UTC] ab@php.net
-Status: Open +Status: Closed
 [2015-01-19 04:42 UTC] stas@php.net
-Summary: Missing return +Summary: Missing return for collator_sortkey_swap() -Assigned To: +Assigned To: ab
 [2016-07-20 11:39 UTC] davey@php.net
Automatic comment on behalf of bugreports@internot.info
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f418486343e39904f843f472cea973922d7e8244
Log: Fixed bug #68848 Missing return
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 03:00:02 2026 UTC