Fixed bug #68848 Missing return